--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -7,6 +7,18 @@
 <h1>@ViewData["Title"]</h1>
 
 <div>
+    <ul>
+        <li>
+            <a href="~/">Home</a>
+        </li>
+        <li>
+            <a href="~/About">Sobre</a>
+        </li>
+        <li>
+            <a href="~/Login">Login</a>
+        </li>
+    </ul>
+    <h1>Categorias</h1>
     <table>
         <thead>
             <tr>
