--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,5 +1,8 @@
 @page
 @model MyRazorApp.Pages.Index
+@addTagHelper * , Microsoft.AspNetCore.Mvc.TagHelpers
+
+
 @{
     ViewData["Title"] = "Index";
 }
@@ -7,17 +10,8 @@
 <h1>@ViewData["Title"]</h1>
 
 <div>
-    <ul>
-        <li>
-            <a href="~/">Home</a>
-        </li>
-        <li>
-            <a href="~/About">Sobre</a>
-        </li>
-        <li>
-            <a href="~/Login">Login</a>
-        </li>
-    </ul>
+    <partial name="Shared/NavMenuPartial" />
+
     <h1>Categorias</h1>
     <table>
         <thead>
