--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,7 +1,8 @@
 @page
 @model MyRazorApp.Pages.Index
-@addTagHelper * , Microsoft.AspNetCore.Mvc.TagHelpers
-
+@{
+    Layout = "Shared/ _Layout";
+}
 
 @{
     ViewData["Title"] = "Index";
