--- a/Pages/Login.cshtml
+++ b/Pages/Login.cshtml
@@ -1,21 +1,4 @@
-@page
+@page "~/entrar"
 @model MyRazorApp.Pages.Login
-@{
-    ViewData["Title"] = "Login";
-}
 
-<!DOCTYPE html>
-<html>
-
-<head>
-    <title></title>
-</head>
-
-<body>
-    <div>
-        <partial name="Shared/NavMenuPartial" />
-        <h1>Login</h1>
-    </div>
-</body>
-
-</html>
+<h1>Login</h1>
