--- a/Pages/Shared/NavMenuPartial.cshtml
+++ b/Pages/Shared/NavMenuPartial.cshtml
@@ -1,11 +1,11 @@
 <ul>
     <li>
-        <a href="~/">Home</a>
+        <a asp-page="Home">Home</a>
     </li>
     <li>
-        <a href="~/About">Sobre</a>
+        <a asp-page="About">Sobre</a>
     </li>
     <li>
-        <a href="~/Login">Login</a>
+        <a asp-page="Login">Login</a>
     </li>
 </ul>
