--- a/Pages/About.cshtml
+++ b/Pages/About.cshtml
@@ -1,21 +1,5 @@
-@page
-@model MyRazorApp.Pages.About
-@{
-    ViewData["Title"] = "About";
-}
+@page "~/sobre"
+@model MyRazorApp.Pages.Login
 
-<!DOCTYPE html>
-<html>
 
-<head>
-    <title></title>
-</head>
-
-<body>
-    <div>
-        <partial name="Shared/NavMenuPartial" />
-        <h1>Sobre</h1>
-    </div>
-</body>
-
-</html>
+<h1>Sobre</h1>
