--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,27 +1,4 @@
 @page
 @model MyRazorApp.Pages.Index
 
-<div>
-    <partial name="Shared/NavMenuPartial" />
-
-    <h1>Categorias</h1>
-    <table>
-        <thead>
-            <tr>
-                <td>ID</td>
-                <td>Title</td>
-                <td>Price</td>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var category in Model.Categories)
-            {
-                <tr>
-                    <td>@category.Id</td>
-                    <td>@category.Title</td>
-                    <td>@category.Price</td>
-                </tr>
-            }
-        </tbody>
-    </table>
-</div>
+<h1>Home</h1>
