--- a/Pages/Shared/NavMenuPartial.cshtml
+++ b/Pages/Shared/NavMenuPartial.cshtml
@@ -5,6 +5,11 @@
     <li>
         <a asp-page="About">Sobre</a>
     </li>
+
+    <li>
+        <a asp-page="Categories">Categorias</a>
+    </li>
+
     <li>
         <a asp-page="Login">Login</a>
     </li>
